test/preprocessor/fail/extra_tokens.osl
#if 1
#endif SOME EXTRA TEXT
